--- a/saved_settings/config_latest.ini
+++ b/saved_settings/config_latest.ini
@@ -5,7 +5,7 @@ max cav ao/V = 9.0
 min laser ao/V = -2.0
 max laser ao/V = 3.0
 scan time/ms = 2.5
-scan ignore/ms = 1.1
+scan ignore/ms = 1.0
 sampling rate = 384000
 cavity FSR/MHz = 750.0
 lock criteria/MHz = 5.0
@@ -25,7 +25,7 @@ average = 1
 baseline remove = True
 
 [Cavity]
-peak height/V = 0.01
+peak height/V = 0.03
 peak width/pts = 1
 kp = 0.00035
 kp on = True
@@ -33,28 +33,28 @@ ki = 0.021
 ki on = True
 kd = 1.2e-06
 kd on = False
-offset/V = 0.18
+offset/V = 0.2799999999999999
 limit/V = 0.05
 daq ai = Dev3/ai0
 daq ao = Dev3/ao0
 wavenumber/cm-1 = 15798.0
-set point/ms = 1.2
+set point/ms = 1.0999999999999999
 
 [Laser0]
-peak height/V = 0.009999999999999997
+peak height/V = 0.02
 peak width/pts = 1
 kp = 9e-05
-kp on = True
+kp on = False
 ki = 0.0014000000000000002
-ki on = True
+ki on = False
 kd = 9e-08
 kd on = False
-offset/V = 0.12
+offset/V = 0.14
 limit/V = 0.05
 daq ai = Dev3/ai1
 daq ao = Dev3/ao1
 wavenumber/cm-1 = 21698.6
 label = Sr 461
-local freq/MHz = 860.0
+local freq/MHz = 160.0
 freq source = local
 
